--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 /* BASIC STYLES */
+@font-face {
+  font-family: 'PetitCochon';
+  src: url(fonts/Petit_Cochon.ttf);
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -9,6 +14,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    object-fit: cover;
     color: #FFFFFF;
 }
   header {
@@ -47,11 +53,8 @@ body {
 nav li a {
 	display: block;
 	color: #fd7f32;
-    @font-face {
-        font-family: 'petit';
-        src: url("C:\Users\nicol\Documents\CFG Classes\project\fonts\Petit_Cochon.ttf");
-    }
-    font-family: 'petit', verdana;
+    font-family: 'PetitCochon', sans-serif;
+  font-size: 18px;
 	text-align: center;
 	padding: 14px 16px;
 	text-decoration: none;
@@ -59,10 +62,10 @@ nav li a {
 
 nav li a:hover {
 	background-color: #ead9eb;
-    text-transform: capitalize;
+    font-style: italic;
+    text-transform: uppercase;
 }
 #nav_bar__sign_in {
-    background: #4887EF;
   margin-right: 25px;
   padding: 7px 15px;
   border-radius: 3px;
@@ -85,7 +88,11 @@ nav li a:hover {
     align-items: center;
   }
   .search_box {
+    color:  #da7422;
+    font-family: Helvetica, sans-serif;
     text-align: center;
+    font-size: large;
+    padding:  1px;
   }
   #form-search {
     width: 450px;
@@ -94,12 +101,167 @@ nav li a:hover {
   }
   .search_box #form-search {
     padding: 0 8px;
+    text-align: center;
+    font-style: italic;
+    color: #000;
   }
   .buttons {
+
     text-align: center;
     padding-top: 30px;
-    margin-bottom: 300px;
+    margin-bottom: 35px;
   }
+
+/* IMAGE CAROUSEL*/
+
+.carousel {
+  position: relative;
+  overflow:visible;
+  height: 270px;
+  width: 370px;
+  justify-content: center;
+  align-items: center; 
+  margin: 0px auto;
+ }
+ 
+ .carousel__track-container {
+  background: rgb(193, 112, 62);
+  padding: 10px;
+  height: 80%;
+  position: relative;
+  border: none;
+  border-radius: 10px;
+ }
+
+ .carousel__track {
+  margin: 0;
+  list-style: none;
+  position: relative;
+  width: 100%;
+ }
+
+ .carousel__slide {
+  flex-shrink: 0;
+  height: 80%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 10px;
+  transition:  200ms opacity ease-in-out;
+  transition-delay: 200ms;
+  width: 100%;
+  z-index: -1;
+ }
+
+ .carousel__slide[data-active] {
+  opacity: 1;
+  z-index: 1;
+  transition-delay: 0ms;
+ }
+ 
+ .carousel__img{
+  position: absolute;
+  height: 200px;
+  width: 350px;
+  object-fit: cover;
+  object-position: center;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  transition: 0.5s;
+ }
+
+ .carousel__img:hover{
+  box-shadow: 0 0 0 200px rgba(0, 0, 0, .9) inset;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+ }
+
+ .img__desc {
+  position: relative;
+  top: 0;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity .2s, visibility .2s;
+ }
+
+ .carousel__slide:hover .img__desc {
+  visibility: visible;
+  opacity: 1;
+ }
+
+ .carousel__button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: 0;
+  font-size: larger;
+  color: #fffbdb;
+  cursor: pointer;
+  border-radius: .25rem;
+  padding: 0 .5rem;
+  background-color: rgba(0,0,0,.1);
+ }
+
+ .carousel__button:hover,
+ .carousel__button:focus {
+  color: white;
+  background-color: rgba(0,0,0,.4);
+ }
+
+.carousel__button:focus {
+  outline: 1px solid black;
+}
+
+.carousel__button--prev {
+  left: -40px;
+ }
+
+ .carousel__button--next {
+  right: -40px;
+ } 
+
+ .carousel__button img {
+  width: 10px
+ }
+
+
+ .carousel__filters {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+ }
+
+ .carousel__filter {
+  background-color: #FFFFFF;
+  border: none;
+  border-radius: 8px;
+  color: #000;
+  padding: 10px 32px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0 10px;
+  transition: all 0.3s ease;
+ }
+
+ .carousel__filter:hover {
+  background-color: transparent;
+  color: black;
+}
+ 
+
   /* FOOTER */
   footer  {
     background: #F2F2F2;
@@ -136,6 +298,9 @@ nav li a:hover {
    #form-search {
      width: 80%;
    }
+   .carousel {
+    width: 100%;
+   }
    footer {
      bottom: 0;
    }
@@ -166,6 +331,12 @@ nav li a:hover {
    #form-search {
      width: 80%;
    }
+   .carousel {
+    width: 100%;
+   }
+
+   
+
    footer {
   /*    bottom: 0;
      postion: absolute; */
@@ -186,5 +357,5 @@ nav li a:hover {
    .footer-right {
      float: none;
      text-align: center;
+    }
    }
-  }
