--- a/website_style.css
+++ b/website_style.css
@@ -1,70 +1,350 @@
 /* BASIC STYLES */
-body {
+ * {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
   }
   
-  body {
+  .header {
+    min-height: 100vh;
+    width: 100%;
     background-image: url('https://images.pexels.com/photos/1640773/pexels-photo-1640773.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load');
+    background-position: center;
+    position: absolute;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: absolute;
     background-size: cover;
-    color: #FFFFFF;
+}
+
+
+nav {
+  display: flex;
+  padding: 2% 6%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav img {
+  width: 500px;
+  position: absolute;
+  top:0%;
+  left:19.5%;
+}
+
+.nav-links {
+  flex: 1;
+  text-align: right;
+}
+
+.nav-links ul li {
+  padding: 8px 12px;
+  border-radius: 5px;
+  position: relative;
+  list-style-type: none;
+}
+
+.nav-links ul li a {
+  color: #222;
+  text-decoration: none;
+  font-size: 13px;
+}
+
+.nav-links ul li::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #FFA500;
+  display: block;
+  margin: 3px 0;
+  transition: 0.5s;
+}
+
+.nav-links ul li:hover::after{
+  width: 100%;
+}
+
+.text-box{
+  width: 90%;
+  color:#000080;
+  position: absolute;
+  top: 42%;
+  left: -2%;
+  text-align: center;
+}
+
+.text-box h2{
+  font-size: 32px;
+}
+
+.search_box {
+  text-align: center;
+  position: absolute;
+  top:65%;
+  left:25%;
+  background-color: #eee;
+  color: #000080;
 }
 
   header {
     width: 100%;
   }
-  
-  ul {
-    list-style: none;
-  }
 
-#nav_bar {
-    display: flex;
-    flex-direction:row;
-    justify-content: flex-end;
-    padding: 8px;
+
+/*The login button and popup*/
+
+.center {
+  position:absolute;
+  top:85%;
+  left:42%;
+  transform:translate(-50%,-50%);
 }
 
-#nav_bar li{
-    padding: 8px;
+.center button {
+  padding:25px 65px;
+  font-size: 25px;
+  font-weight: 600;
+  color:#FFA500;
+  background: #eee;
+  border: 5px;
+  border-color: #8A2BE2;
+  outline: 5px;
+  outline-color: #8A2BE2;
+  cursor:pointer;
+  border-radius:5px;
 }
 
-#nav_bar__sign_in {
-    background: #4887ef; 
-  margin-right: 25px;
-  padding: 7px 15px;
-  border-radius: 3px; 
-  font-weight: bold;
+.popup {
+  position: absolute;
+  top:50%;
+  left:50%;
+  opacity: 0;
+  transform:translate(-50%,-50%) scale(1.25);
+  width:380px;
+  padding:20px 30px;
+  background:#fff;
+  box-shadow: 2px 2px 5px 5px rgba(0,0,0,0.15);
+  border-radius: 10px;
+  transition: top 0ms ease-in-out 200ms, opacity 200ms ease-in-out 0ms, transform 20ms ease-in-out 0ms;  
 }
 
-.nav-links {
-    color: #404040;
-  }
+.popup.active {
+  top: 50%;
+  opacity: 1;
+  transform:translate(-50%,-50%) scale(1);
+  transition: top 0ms ease-in-out 0ms, opacity 200ms ease-in-out 0ms, transform 20ms ease-in-out 0ms;  
+}
+.popup .close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 15px;
+  height: 15px;
+  background: #888;
+  color: #eee;
+  text-align: center;
+  line-height: 15px;
+  border-radius: 15px;
+  cursor: pointer;
+}
 
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  #sign_in {
-    color: #fff;
-  }
+.popup .form h2 {
+  text-align: center;
+  color: #222;
+  margin: 10px 0px 20px;
+  font-size: 25px;
+}
 
-/* GOOGLE AREA */
-.image_1 #background_image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+.popup .form .form-element {
+  margin: 15px 0px;
+}
+
+.popup .form .form-element label {
+  font-size: 14px;
+  color:#222;
+}
+
+.popup .form .form-element input[type="text"],
+.popup .form .form-element input[type="password"] {
+  margin-top: 5px;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  outline: none;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+}
+
+.popup .form .form-element inout[type="checkbox"] {
+  margin-right: 5px;
+}
+
+.popup .form .form-element button {
+  width: 100%;
+  height: 40px;
+  border: none;
+  outline: none;
+  font-size: 15px;
+  background: #222;
+  color: #f5f5f5;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.popup .form .form-element a {
+  display: block;
+  text-align: right;
+  font-size: 15px;
+  color: #FFA500;
+  text-decoration: none;
+  font-weight: 600;
+}
+
+.carousel {
+  position: relative;
+  overflow:visible;
+  height: 270px;
+  width: 370px;
+  justify-content: center;
+  align-items: center; 
+  margin: 0px auto;
+ }
+ 
+ .carousel__track-container {
+  background: rgb(193, 112, 62);
+  padding: 10px;
+  height: 80%;
+  position: relative;
+  border: none;
+  border-radius: 10px;
+ }
+​
+ .carousel__track {
+  margin: 0;
+  list-style: none;
+  position: relative;
+  width: 100%;
+ }
+​
+ .carousel__slide {
+  flex-shrink: 0;
+  height: 80%;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 10px;
+  transition:  200ms opacity ease-in-out;
+  transition-delay: 200ms;
+  width: 100%;
+  z-index: -1;
+ }
+​
+ .carousel__slide[data-active] {
+  opacity: 1;
+  z-index: 1;
+  transition-delay: 0ms;
+ }
+ 
+ .carousel__img{
+  position: absolute;
+  height: 200px;
+  width: 350px;
+  object-fit: cover;
+  object-position: center;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  transition: 0.5s;
+ }
+ .carousel__img:hover{
+  box-shadow: 0 0 0 200px rgba(0, 0, 0, .9) inset;
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+ }
+ .img__desc {
+  position: relative;
+  top: 0;
+  left: 50%;
+  bottom: 50%;
+  transform: translate(-50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity .2s, visibility .2s;
+ }
+
+ .carousel__slide:hover .img__desc {
+  background-color: rgba(0,0,0,.4);
+  visibility: visible;
+  opacity: 1;
+ }
+ .carousel__button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: 0;
+  font-size: larger;
+  color: #fffbdb;
+  cursor: pointer;
+  border-radius: .25rem;
+  padding: 0 .5rem;
+  background-color: rgba(0,0,0,.1);
+ }
+ .carousel__button:hover,
+ .carousel__button:focus {
+  color: white;
+  background-color: rgba(0,0,0,.4);
+ }
+
+.carousel__button:focus {
+  outline: 1px solid black;
+}
+
+.carousel__button--prev {
+  left: -40px;
+ }
+
+ .carousel__button--next {
+  right: -40px;
+ } 
+
+ .carousel__button img {
+  width: 10px
+ }
+
+
+
+ .carousel__filters {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+ }
+
+ .carousel__filter {
+  background-color: #FFFFFF;
+  border: none;
+  border-radius: 8px;
+  color: #000;
+  padding: 10px 32px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  margin: 0 10px;
+  transition: all 0.3s ease;
+ }
+
+ .carousel__filter:hover {
+  background-color: transparent;
+  color: black;
+} 
   
-  .search_box {
-    text-align: center;
-  }
-  
-  #form-search { 
+ /*#form-search { 
     width: 450px;
     line-height: 32px;
     padding: 20px 10px;
@@ -79,7 +359,7 @@ body {
     padding-top: 30px;
     margin-bottom: 300px;
   }
-  
+  */
   /* FOOTER */
   footer  {
     background: #f2f2f2;
@@ -107,8 +387,93 @@ body {
   
   /* MEDIA QUERIES */
   
-  @media screen and (max-width: 400px) {
-   
+  @media screen and (max-width: 700px) {
+    .text-box h2{
+      font-size: 20px;
+      position: absolute;
+      top: 80%;
+      left: 16%;
+      text-align: center;
+    }
+
+    nav img{
+      width: 250px;
+      position: center;
+      top: 21%;
+      left: 10%;
+    }
+
+    .nav-links {
+      flex:1;
+      text-align: left;
+    }
+
+    .search_box {
+      text-align: center;
+      position: absolute;
+      top:60%;
+      left:8%;
+      background-color: #eee;
+      color: #000080;
+    }
+
+    #form-search { 
+      width: 300px;
+      line-height: 32px;
+      padding: 20px 10px;
+    }
+    
+    .search_box #form-search {
+      padding: 0 70px;
+    }
+    
+    .center {
+      position:absolute;
+      top:76%;
+      left:46%;
+      transform:translate(-50%,-50%);
+    }
+
+    .center button {
+      padding:10px 35px;
+      font-size: 15px;
+      font-weight: 600;
+      color:#FFA500;
+      background: #eee;
+      border: 5px;
+      border-color: #8A2BE2;
+      outline: 5px;
+      outline-color: #8A2BE2;
+      cursor:pointer;
+      border-radius:5px;
+    }
+    
+    footer {
+      bottom: 0;
+      position: absolute;
+      position:absolute;
+      bottom:0;
+      width:100%;
+      height:60px;
+    }
+     
+    footer ul {
+      float: none;
+      padding-bottom: 2px;
+    }
+     
+    .footer-left {
+      text-align: center;
+      margin: auto; 
+      padding-top: 10px;
+       
+    }
+     
+    .footer-right {
+      float: none;
+      text-align: center;
+    }
+
    li.nav-links a {
       display: none;
     }
@@ -149,52 +514,7 @@ body {
      
    }
   }
-  
-  @media screen and (max-width: 565px) {
+
    
-    li.nav-links a {
-      display: none;
-    }
-    
-    
-   #google_logo {
-     padding: 0;
-   }
-    
-   .buttons {
-     display: none;
-   }
-    
-   #form-search {
-     width: 80%;
   
-   }
-    
-   footer {
-  /*    bottom: 0;
-     postion: absolute; */
-     position:absolute;
-     bottom:0;
-     width:100%;
-     height:60px;
-   }
-    
-   footer ul {
-     float: none;
-     padding-bottom: 2px;
-      
-   }
-    
-   .footer-left {
-     text-align: center;
-     margin: auto; 
-     padding-top: 10px;
-      
-   }
-    
-   .footer-right {
-     float: none;
-     text-align: center;
-     
-   }
-  }
+  
